--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ th {
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <br><br>
-          <a class="btn" href="me.ritamsadhu1999@gmail.com">CONTACT ME</a>
+          <a class="btn" href="mailto:me.ritamsadhu1999@gmail.com">CONTACT ME</a>
         </div>
       </div>
       
