--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ th {
           <h2>My Skills.</h2>
           <div class="skill-row">
             <img class="" src="https://cdn.atomisystems.com/uploads/2021/07/Animation-software.png" width="165" height="120" alt="image">
-            <p>Data structures and Algorithms, Competitive Programming, Web development, SQL, AutoCad drawing.</p>
+            <!-- <p>Data structures and Algorithms, Competitive Programming, Web development, SQL, AutoCad drawing.</p> -->
             <ul class="laptop">
               <li>C++</li>
               <li>C</li>
@@ -271,7 +271,7 @@ th {
       <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/in/ritamsadhu/">LinkedIn</a>
         <span class="bottom-span"></span>
-        <a class="footer-link" href="https://leetcode.com/ritamsadhu/">LeetCode</a>
+       <!-- <a class="footer-link" href="https://leetcode.com/ritamsadhu/">LeetCode</a> -->
         <p class="copyright">© Ritam Sadhu.</p>
       </div>
       
